# SchemesSG_v3

./: .env  .gitignore  .gitmodules  .releaserc.json  CLAUDE.md  DESIGN.md  Deployment.py  LICENSE  Main_scrape.py  NoteOnWindowsLocalDeployment.md  PRODUCT.md  READ ME.txt  README.md  app.py  df.csv  docker-compose.yml  firebase.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  pull_request_template.md  pyproject.toml  requirements.txt  requirements2.txt  requirements_old.txt  schemes_model.py
.github/: dependabot.yml
archive/: Deployment.py  mentalhealth.csv
backend/: .coveragerc  .dockerignore  .env.sample  .firebaserc  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.firebase  Makefile  README.md  README_backend_docker.md  docker-compose-firebase.yml  firebase.json  firestore.indexes.json  pyproject.toml  pytest.ini  requirements.txt  setup.py  start.sh  test-endpoint.http
backend/fast_api/: api.py
backend/functions/: .env.example  .firebaseignore  .gitignore  extract_text_from_raw_string.py  firestore_doc.json  inspect_firestore.py  inspect_firestore_doc_size.py  main.py  requirements.txt
backend/functions/agent/: __init__.py  cache.py  chat.py  context_manager.py  engine.py  engine_old.py  event_type.py  firestore_saver.py  followup.py  followup_agent.py  handler.py  main.py  main_agent.py  output_sanitizer.py  router.py  tracing.py
backend/functions/agent/prompts/: followup.py  main.py  router.py
backend/functions/agent/runtimes/: __init__.py
backend/functions/agent/runtimes/followup/: __init__.py  config.py  context_manager.py  engine.py  prompt.py
backend/functions/agent/runtimes/main_agent/: __init__.py  config.py  context_manager.py  engine.py  helpers.py  prompt.py
backend/functions/agent/tools/: __init__.py  clarification.py  current_results.py  fetch_webpage.py  filter_rerank.py  load_skill.py  retrieve_scheme.py  search.py  websearch.py
backend/functions/batch_jobs/: __init__.py  run_link_check_and_reindex.py  slack_blocks.py
backend/functions/chat/: chat.py
backend/functions/dummy/: bar.py  foo.py
backend/functions/fb_manager/: firebaseManager.py
backend/functions/feedback/: feedback.py
backend/functions/firestore/: firestore.py
backend/functions/integrations/: __init__.py  embeddings_manager.py  llm_manager.py
backend/functions/mh_model/: data_labelled.csv  mh_model.ipynb  mh_model.py
backend/functions/ml_logic/: __init__.py  cache.py  chatbotManager.py  config.py  firestore_saver.py  modelManager.py  prompt.py  schemes-sources.csv  schemes-updated-with-text.csv  searchModelManager.py  states.py  text_utils.py
backend/functions/new_scheme/: __init__.py  approval_handler.py  constants.py  new_scheme_blocks.py  pipeline_runner.py  trigger_new_scheme_pipeline.py  url_utils.py
backend/functions/schemes/: catalog.py  schemes.py  search.py  search_queries.py
backend/functions/scripts/: populate_embeddings.py  run_link_check_and_reindex.py  test_vector_search.py
backend/functions/search/: __init__.py  handler.py  llm_projection.py  retriever.py  scorers.py  search.py  types.py
backend/functions/slack/: block_kit.py  storage.py
backend/functions/slack_integration/: README.md  block_kit.py  slack.py  slack_utils.py  storage.py
backend/functions/update_scheme/: update_scheme.py
backend/functions/utils/: auth.py  catalog_pagination.py  check_link.py  cors_config.py  endpoints.py  json_utils.py  logging_setup.py  pagination.py  reindex_embeddings.py
backend/ml_logic/: model.py  preprocessing.py  schemes-sources.csv  schemes-updated-with-text.csv
backend/scheme-processor/: .dockerignore  Dockerfile  deploy.sh  pyproject.toml  test_extract.py
backend/scheme-processor/app/: config.py  main.py  models.py  pipeline.py
backend/scheme-processor/app/clients/: firestore.py  onemap.py  slack_blocks.py  slack_poster.py
backend/scheme-processor/app/services/: extraction.py  llm_extractor.py  scraper.py
backend/scripts/: README.md
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: __init__.py  conftest.py  test_agent_email_sanitization.py  test_approval_handler_update.py  test_catalog.py  test_chat.py  test_chatbot_manager.py  test_feedback.py  test_schemes.py  test_search.py  test_search_queries.py  test_trigger_new_scheme_pipeline.py  test_update_scheme.py
backend/tests/unit/: __init__.py  test_agent_load_skill.py  test_agent_output_sanitizer.py  test_agent_router_prompt.py  test_agent_search_llm_payload.py  test_agent_search_target.py  test_cache.py  test_chatbot_manager.py  test_clarification_tool.py  test_current_results_tools.py  test_fetch_webpage.py  test_firestore_saver.py  test_link_check_slack_blocks.py  test_pagination.py  test_reindex_embeddings.py  test_scheme_review_blocks.py  test_search_cutoff.py  test_search_model.py  test_search_retrieval.py  test_search_scoring.py  test_url_utils.py
dataset_worfklow/: Readme.md  constants.py  create_transformer_models.py  export-firestore-structure-prod-user-logs.js  export-firestore-structure.js  firestore.rules  import-csv.js  import-firestore-structure.js  model-creation-transformer-laiss.ipynb  one-time-clean-new-data.ipynb  package-lock.json  package.json  requirements.txt  run_data_pipeline.py  run_steps_3_to_7.sh  schemes 11 nov.csv  schemesv3_1409schemes_19Apr.csv  schemesv3_2025_expanded.csv  schemesv3_2025_processed.csv  test_model_artefacts_created.py  upload_model_artefacts.py
dataset_workflow/: .dockerignore  CENTRALIZED_LOGGING_README.md  Dockerfile  PROD_RESTORE_STATUS.md  Readme.md  TOKEN_LOGGING_README.md  package-lock.json  package.json  requirements.txt  schemesv3_schemes_13Jul add CareCorner.csv  schemesv3_schemes_20Apr subset 400.csv
frontend/: .env.development  .firebaserc  .gitignore  .npmrc  CLAUDE.md  Dockerfile  README.md  app.py  config.py  firebase.json  (+14 more)
telegram_bot/: .dockerignore  .env.sample  .gitignore  ReadME.md  app.py  bot.py  deploy.sh  pyproject.toml  requirements.txt
telegram_bot/handlers/: main_handlers.py
telegram_bot/utils/: api.py  auth.py  data.py  format.py
(+443 files in other folders)
