[tool.poetry]
name = "schemes-backend"
version = "0.1.0"
description = ""
authors = ["Schemes Team <>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
contextlib2 = "^21.6.0"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl"}
faiss-cpu = "^1.8.0.post1"
fastapi = "^0.112.0"
numpy = "~1.26.0"
pandas = "^2.2.2"
python = "^3.9"
python-multipart = "^0.0.9"
spacy = "^3.7.5"
torch = "^2.4.0"
transformers = "^4.44.0"
uvicorn = "^0.30.5"
python-dotenv = "^1.0.1"
langchain-openai = "^0.1.21"
langchain-community = "^0.2.12"
langchain-core = "^0.2.30"
langchain-google-genai = "^1.0.8"
flask = {extras = ["async"], version = "^3.0.3"}

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ruff = "^0.5.7"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 119

[tool.ruff.lint]
# Never enforce `E501` (line length violations).
ignore = ["C901", "E501", "E741", "F402", "F823" ]
select = ["C", "E", "F", "I", "W"]

# Ignore import violations in all `__init__.py` files.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]
"src/transformers/file_utils.py" = ["F401"]
"src/transformers/utils/dummy_*.py" = ["F401"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["transformers"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.pytest.ini_options]
doctest_optionflags="NUMBER NORMALIZE_WHITESPACE ELLIPSIS"
doctest_glob="**/*.md"
markers = [
    "flash_attn_test: marks tests related to flash attention (deselect with '-m \"not flash_attn_test\"')",
    "bitsandbytes: select (or deselect with `not`) bitsandbytes integration tests",
]
